todos-app/k8s/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    component: backend
spec:
  containers:
    - name: todo-backend-app
      image: bukalra2/todo-backend:1.0.1
      ports:
        - containerPort: 8000
