todos-app/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      component: frontend
  template:
    metadata:
      labels:
        component: frontend
    spec:
      containers:
        - name: todo-frontend-app
          image: bukalra2/todo-frontend:1.0.2
          ports:
            - containerPort: 80
